fix overflow location card

--- a/src/pages/LandingPage/LandingPage.module.css
+++ b/src/pages/LandingPage/LandingPage.module.css
@@ -20,8 +20,9 @@
 
 .contentSection {
   display: flex;
-  justify-content: space-around;
   gap: 24px;
+  min-width: 0;
+  overflow-x: scroll;
 }
 
 .titleSection {
